k8s-smokeping/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeping
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  # Replace "192.168.1.123" with your server address
  rules:
  - host: smokeping.192.168.1.123.nip.io
    http:
      paths:
      - backend:
          service:
            name: smokeping
            port:
              number: 80
        path: /
        pathType: Prefix
  # # Uncomment this to resolve smokeping at http://192.168.1.123/smokeping in case you want the option to skip DNS
  # - http:
  #     paths:
  #     - backend:
  #         service:
  #           name: smokeping
  #           port:
  #             number: 80
  #       path: /smokeping
  #       pathType: Prefix
